# keviq-core

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SYSTEM.md  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/artifact-service/: Dockerfile  pyproject.toml
apps/artifact-service/alembic/: env.py
apps/artifact-service/alembic/versions/: 001_create_outbox.py  002_create_artifacts.py  003_create_artifact_provenance.py  004_create_artifact_lineage_edges.py  005_add_unique_agent_invocation.py  006_create_artifact_annotations.py  007_create_artifact_tags.py
apps/artifact-service/src/: internal_auth.py  main.py
apps/artifact-service/src/api/: route_helpers.py  routes.py  routes_annotations.py  routes_commands.py  routes_content.py  routes_internal.py  routes_lineage.py  routes_queries.py  routes_tags.py
apps/artifact-service/src/application/: bootstrap.py  events.py  ports.py  services.py
apps/artifact-service/src/domain/: __init__.py  annotation.py  artifact.py  errors.py  lineage.py  provenance.py
apps/artifact-service/tests/arch/: test_import_boundaries.py
apps/artifact-service/tests/unit/: _search_fakes.py  (+8 more)
apps/claude-bridge/: Dockerfile  pyproject.toml
apps/claude-bridge/src/: cli_runner.py  main.py  routes.py
apps/execution-service/: Dockerfile  pyproject.toml
apps/execution-service/alembic/: env.py
apps/execution-service/src/: main.py
apps/secret-broker/: Dockerfile  alembic.ini  pyproject.toml
apps/secret-broker/alembic/: env.py
apps/secret-broker/src/: main.py
(+586 files in other folders)
