[project]
name = "claude-bridge"
version = "0.1.0"
description = "Local-only bridge: routes Keviq Core model calls through Claude Code CLI subscription"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]
